test_suite/tests/errors/multiple_block_attribute_blocks.rs
use banish::banish;

async fn main() {
    banish! {
        #![async]
        #![async]

        #[max_iter = 5]
        @foo
            done? { return; }
    }
}
