test_suite/tests/errors/multiple_block_attribute_blocks.stderr
error: A block may only have one block attribute block `#![...]`
 --> tests/errors/multiple_block_attribute_blocks.rs:6:9
  |
6 |         #![async]
  |         ^

error[E0752]: `main` function is not allowed to be `async`
 --> tests/errors/multiple_block_attribute_blocks.rs:3:1
  |
3 | async fn main() {
  | ^^^^^^^^^^^^^^^ `main` function is not allowed to be `async`
